--- a/OBENGKU-WEB/assets/css/home_fix.css
+++ b/OBENGKU-WEB/assets/css/home_fix.css
@@ -28,7 +28,7 @@
     }
     .parallax2 {
         /* The image used */
-        background-image: url('../img/p2.jpg');
+        background-image: url('../img/Banner.jpg');
 
         /* Full height */
         height: 100%;
@@ -40,6 +40,26 @@
         background-size: cover;
     
     }
+
+
+    .parallax3 {
+        /* The image used */
+        background-image: url('../img/mstr.png');
+
+        /* Full height */
+        height: 100%;
+       
+        /* Create the parallax scrolling effect */
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100%;
+  
+      
+    
+    }
+
 .box_txt{
     height:500px;
     background-color:darkgrey;
@@ -120,3 +140,70 @@
 		.fade-left.showing{left:-0px;opacity:1;}
 		.fade-right.showing{right:-0px;opacity:1;}
     
+
+
+        /* loader  page */
+
+
+ #loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+  
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 } 
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ bottom:-100px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
+
+#myDiv {
+  display: none;
+  text-align: center;
+}
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color:rgb(59, 54, 54)
+   color: white;
+   text-align: center;
+}
