update home responsif

--- a/OBENGKU-WEB/assets/css/home_fix.css
+++ b/OBENGKU-WEB/assets/css/home_fix.css
@@ -62,9 +62,10 @@
 
 .box_txt{
     height:500px;
-    background-color:darkgrey;
+    background-color:rgb(95, 95, 95);
     font-size:25px;
     color: white;
+    
     
 
 }
