--- a/OBENGKU-WEB/assets/css/home_fix.css
+++ b/OBENGKU-WEB/assets/css/home_fix.css
@@ -28,7 +28,7 @@
     }
     .parallax2 {
         /* The image used */
-        background-image: url('../img/Banner.jpg');
+        background-image: url('../img/peta.png');
 
         /* Full height */
         height: 100%;
@@ -156,7 +156,7 @@
   margin: -75px 0 0 -75px;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
+  border-top: 16px solid orange;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
