--- a/OBENGKU-WEB/assets/css/home_fix.css
+++ b/OBENGKU-WEB/assets/css/home_fix.css
@@ -233,7 +233,7 @@
 		{
 			background-color: zoom;
   			-webkit-transform: scale(1.08);
- 			transform: scale(1.08);
+ 			transform: scale(0.88);
             z-index: 50;
             margin-right:20rem;
         }
@@ -375,4 +375,90 @@ legend.form-label {
 .strength-meter-fill[data-strength='4'] {
     background: green;
     width: 100%;
+}
+
+.example1 {
+ height: 50px;	
+ overflow: hidden;
+ position: relative;
+}
+.example1 h3 {
+ font-size: 3em;
+ color: limegreen;
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ margin: 0;
+ line-height: 50px;
+ text-align: center;
+ /* Starting position */
+ -moz-transform:translateX(100%);
+ -webkit-transform:translateX(100%);	
+ transform:translateX(100%);
+ /* Apply animation to this element */	
+ -moz-animation: example1 15s linear infinite;
+ -webkit-animation: example1 15s linear infinite;
+ animation: example1 15s linear infinite;
+}
+/* Move it (define the animation) */
+@-moz-keyframes example1 {
+ 0%   { -moz-transform: translateX(100%); }
+ 100% { -moz-transform: translateX(-100%); }
+}
+@-webkit-keyframes example1 {
+ 0%   { -webkit-transform: translateX(100%); }
+ 100% { -webkit-transform: translateX(-100%); }
+}
+@keyframes example1 {
+ 0%   { 
+ -moz-transform: translateX(100%); /* Firefox bug fix */
+ -webkit-transform: translateX(100%); /* Firefox bug fix */
+ transform: translateX(100%); 		
+ }
+ 100% { 
+ -moz-transform: translateX(-100%); /* Firefox bug fix */
+ -webkit-transform: translateX(-100%); /* Firefox bug fix */
+ transform: translateX(-100%); 
+ }
+}
+
+.chip {
+    display: inline-block;
+    padding: 0 25px;
+    height: 50px;
+    width: 5rem;
+    font-size: 16px;
+    line-height: 50px;
+    border-radius: 25px;
+    background-color: darkgray;
+    color:white;
+}
+
+.chip img {
+    float: left;
+    margin: 0 10px 0 -25px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+
+.chip2 {
+    display: inline-block;
+    padding: 0 25px;
+    height: 50px;
+    width: 5rem;
+    font-size: 16px;
+    line-height: 50px;
+    border-radius: 25px;
+    background-color:#fdd100;
+    color:white;
+}
+
+.chip2 img {
+    float: left;
+    margin: 0 10px 0 -25px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
 }
